# urdf_to_screw_list

./: CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  tm5-700.urdf.xacro
include/robot_math_utils/: robot_math_utils_v1_14.hpp  robot_math_utils_v1_15.hpp
include/urdf_to_screw_list/: screw_utils.hpp
launch/: openarm_v10.launch.py  tm5_700.launch.py
screw_lists/: openarm_v10_body_screws.yaml  openarm_v10_left_body_screws.yaml  openarm_v10_right_body_screws.yaml  tm5_700_body_screws.yaml
src/: urdf_to_screw_list.cpp  urdf_to_screw_list_node.cpp
