<?xml version="1.0"?>
<package format="3">
  <name>urdf_to_screw_list</name>
  <version>0.1.0</version>
  <description>Convert URDF/Xacro to ScrewList (Modern Robotics PoE) in ROS 2.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>urdf</depend>
  <depend>urdfdom</depend>
  <depend>urdfdom_headers</depend>

  <!-- For find_package(Eigen3) on ROS 2 Humble -->
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
